# scRareRefine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: immune_dc.yaml  immune_dc_cdc1_p0.yaml  immune_dc_p0.yaml  pancreas_epsilon.yaml  pancreas_gamma.yaml  pancreas_p0.yaml
docs/: 研究方案 v0.1.md
docs/reports/: immune_dc_p0_analysis_report.md  immune_dc_p0_analysis_report.rar  inductive_validation_report.md
docs/superpowers/plans/: 2026-05-06-run-inductive-visualization.md
scrare_refine/: __init__.py  anndata_utils.py  audit.py  config.py  fusion.py  inductive.py  io.py  marker_verifier.py  metrics.py  output_layout.py  prototype.py  prototype_gate.py  resources.py  splits.py
scrare_refine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: analyze_p0.py  audit_dataset.py  evaluate_fusion.py  evaluate_inductive_prototype_marker.py  evaluate_marker_threshold_validation.py  evaluate_marker_verifier.py  evaluate_prototype_gate.py  organize_outputs.py  run_scanvi_inductive.py  run_scanvi_p0.py
src/scrare/: __init__.py
src/scrare/cli/: __init__.py  audit.py  run_inductive.py  (+1 more)
tests/: test_anndata_utils.py  test_audit.py  test_fusion.py  test_inductive.py  test_label_masking.py  test_marker_verifier.py  test_metrics.py  test_organize_outputs.py  test_output_layout.py  test_project_state.py  test_prototype.py  test_prototype_gate.py  test_resources.py
tests/cli/: test_cli_smoke.py
tests/evaluation/: test_posthoc.py
tests/visualization/: test_inductive_plots.py
tests/workflows/: test_inductive_workflow.py  test_workflow_smoke.py
(+17 files in other folders)
